[project]
name = "emote-rl"
version = "23.0.0"
description = "A modular reinforcement learning library"
authors = [
    {name = "Embark Studios", email = "python@embark-studios.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "tensorboard>=2.8.0",
    "setuptools==59.5",
    "psutil>=5.8.0",
    "onnx>=1.10",
    "gymnasium==0.27.1",
    "box2d-py>=2.3.8",
    "pygame>=2.2.0",
]

[project.optional-dependencies]
torch = ["torch==1.11"]
ci = ["gsutil>=4.66"]

[tool.pdm.dev-dependencies]
tools = [
   "pytest~=6.0",
   "black~=22.1",
   "bandit~=1.7",
   "isort~=5.10",
]

docs = [
    "Sphinx~=4.4",
    "sphinxcontrib-apidoc~=0.3",
    "sphinx-autodoc-typehints~=1.17",
    "sphinx-rtd-theme~=1.0.0",
    "myst-parser~=0.18.0"
]

[tool.pdm.scripts]
post_install = "pdm plugin add pdm-plugin-torch==23.0.0"
post_lock = "pdm torch lock"

[[tool.pdm.source]]
type = "index"
url = "https://download.pytorch.org/whl/cpu/"
name = "torch"

[tool.pdm.resolution]
respect-source-order = true

[tool.pdm.plugins.torch]
dependencies = [
   "torch==1.10.2"
]
lockfile = "torch.lock"
enable-cpu = true

enable-rocm = true
rocm-versions = ["4.2"]

enable-cuda = true
cuda-versions = ["cu111", "cu113"]

[project.urls]
repository = "https://github.com/EmbarkStudios/emote"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
#log_cli_level = "INFO"  # Useful when debugging locally
log_format = "%(asctime)s:\t%(message)s"
log_date_format = "%H:%M:%S"

[tool.isort]
py_version = 39
profile = "black"
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["emote"]
known_first_party = ["emote"]


[tool.black]
target-version = ['py39']

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"
