[project]
name = "emote-rl"
version = "23.0.0"
description = "A modular reinforcement learning library"
authors = [
    {name = "Embark Studios", email = "python@embark-studios.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "tensorboard>=2.8.0",
    "setuptools==59.5",
    "psutil>=5.8.0",
    "onnx>=1.10",
    "atomicwrites>=1.4.0",
    "numpy<1.24",
]

[project.optional-dependencies]
torch = ["torch==1.12.0"]
atari = [
    "gymnasium>=0.27.1",
    "box2d-py>=2.3.5",
    "pygame>=2.1.0"
]
wandb = ["wandb>=0.14.0"]
ci = ["gsutil>=4.66", "emote-rl[atari, wandb]"]

[tool.pdm.dev-dependencies]
tools = [
   "pytest~=6.0",
   "black~=22.1",
   "bandit~=1.7",
   "isort~=5.10",
   "flake8>=6,<7",
]

docs = [
    "Sphinx~=4.4",
    "sphinxcontrib-apidoc~=0.3",
    "sphinx-autodoc-typehints~=1.17",
    "sphinx-rtd-theme~=1.0.0",
    "myst-parser~=0.18.0"
]

[tool.pdm.scripts]
post_install = "pdm plugin add pdm-plugin-torch>=23.1.1,<23.4.0"

post_lock = "pdm torch lock"
docs = "bash -c 'cd docs && rm -rf _build/dirhtml/ && make dirhtml'"
docs-serve = "python -m http.server --directory docs/_build/dirhtml"

test = "pytest tests"

flake8_ = "flake8 emote experiments tests"
bandit_ = "bandit --r -ll emote experiments tests"
lint.composite = ["bandit_", "flake8_"]

black_ = "black emote experiments tests"
isort_ = "isort emote experiments tests"
fmt.composite = ["black_", "isort_"]

precommit.composite = ["fmt", "lint", "test"]

[[tool.pdm.source]]
type = "index"
url = "https://download.pytorch.org/whl/cpu/"
name = "torch"

[tool.pdm.resolution]
respect-source-order = false

[tool.pdm.plugins.torch]
dependencies = [
   "torch==1.12.0"
]
lockfile = "torch.lock"
enable-cpu = true

enable-rocm = false  # there's no +rocm variants for mac where it'd be useful, so this is a bit shot.
rocm-versions = ["5.0"]

enable-cuda = true
cuda-versions = ["cu116"]

[project.urls]
repository = "https://github.com/EmbarkStudios/emote"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
#log_cli_level = "INFO"  # Useful when debugging locally
log_format = "%(asctime)s:\t%(message)s"
log_date_format = "%H:%M:%S"

[tool.isort]
py_version = 39
profile = "black"
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["emote"]
known_first_party = ["emote"]
line_length = 100

[tool.black]
target-version = ['py39']
line-length = 100

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"
