[project]
name = "emote-rl"
version = "23.0.0"
description = "A modular reinforcement learning library"
authors = [{ name = "Embark Studios", email = "python@embark-studios.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "tensorboard>=2.8.0",
    "setuptools==59.5",
    "psutil>=5.8.0",
    "onnx>=1.10",
    "atomicwrites>=1.4.0",
    "numpy<1.24",
    "cloudpickle~=3.0",
]


[project.optional-dependencies]
torch = ["torch==1.12.0"]
atari = [
    "gymnasium>=0.27.1",
    "box2d-py>=2.3.5",
    "pygame>=2.1.0",
    "opencv-python>=3.0",
]
wandb = ["wandb>=0.14.0"]
protobuf = ["protobuf>=4.0"]
ci = ["gsutil>=4.66"]

[project.urls]
repository = "https://github.com/EmbarkStudios/emote"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
#log_cli_level = "INFO"  # Useful when debugging locally
log_format = "%(asctime)s:\t%(message)s"
log_date_format = "%H:%M:%S"

[tool.isort]
py_version = 310
profile = "black"
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["emote"]
known_first_party = ["emote"]
line_length = 100

[tool.black]
target-version = ['py310']
line-length = 100

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "src"
